# haro

./: .gitignore  AGENTS.md  LIBRECHAT_GAP.md  LICENSE.md  README.md  package.json  patch_chatblock.js  patch_pages.js  patch_sidebar.js  patch_sidebar2.js  patch_sidebar3.js  patch_sidebar4.js  pnpm-lock.yaml  test-render.js  turbo.json
.opencode/command/: check.sh  format-edits.sh  ralph.sh
.opencode/config/: agent-metadata.json
apps/haro-gateway/: CLAUDE.md  package.json  stress-test.js  wrangler.toml
apps/haro-voice/: AGENTS.md  README.md  requirements.txt
apps/mcp/: package.json  tsconfig.json  wrangler.toml
apps/memory-fabric/: README.md  pyproject.toml
apps/memory-fabric/deploy/: env.example  fabric-monitor.service  fabric-monitor.timer  memory-fabric-mcp.service  memory-fabric-proxy.service  resource-snapshot.service  resource-snapshot.timer  tenant-cleanup.service  tenant-cleanup.timer
apps/memory-fabric/docs/: tenant-management-setup.md
apps/memory-fabric/scripts/: monitor.py  resource-snapshot.py  run-proxy.sh  smoke_test.sh  tenant-cleanup.py
apps/memory-fabric/src/memory_fabric/: proxy_api.py  server.py  tenant_manager.py
apps/memory-fabric/tests/: test_proxy_api_tenants.py  test_quota_enforcement.py  test_service_token_auth.py  test_tenant_manager.py  test_usage_counters.py
apps/website/: .gitignore  (+9 more)
assistant-hub/: .env.example  docker-compose.yml  ecosystem.config.js  start.sh
backend/: main.py  pipeline.py  tts.py  vad.py
docs/: PRD.md
engine/: AGENTS.md
webapp/: index.html  package-lock.json
workflows/: notification.yml
(+605 files in other folders)
